Bug 365658 - git master: expanding a library clip containing multiple titles, all timeline title clips references the same title clip instead of individual titles
Summary: git master: expanding a library clip containing multiple titles, all timeline...
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Video Effects & Transitions (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Vincent PINON
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-14 10:26 UTC by Wegwerf
Modified: 2016-07-23 18:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wegwerf 2016-07-14 10:26:40 UTC
While working on a project I noticed the following issue: create a library clip that contains multiple title clips. Now, when adding the library clip to another project and expanding the library clip in the timeline I end up with all title clips in the timeline referencing the same single project bin title clip. The other title clips are properly available in the project bin, but are not referenced as they should by the timeline title clips.
Comment 1 Vincent PINON 2016-07-23 18:00:24 UTC
Git commit 2157b070763e4e6e5d60f81b5b499cccb91c7121 by Vincent Pinon.
Committed on 23/07/2016 at 18:00.
Pushed by vpinon into branch 'Applications/16.08'.

fix expanding library clip containing titles

M  +16   -22   src/bin/bin.cpp
M  +14   -16   src/timeline/customtrackview.cpp
M  +1    -1    src/timeline/customtrackview.h
M  +2    -2    src/timeline/timeline.cpp
M  +1    -1    src/timeline/timeline.h

http://commits.kde.org/kdenlive/2157b070763e4e6e5d60f81b5b499cccb91c7121
Comment 2 Wegwerf 2016-07-23 18:30:14 UTC
Great, thank you very much for fixing this, Vincent! I've tried it on my several titles long outro library clip with lots of transitions ... and it worked like a charm! I just had to find out how many additional tracks my library clip needs before it will expand... *nudge*

Another improvement in Kdenlive usability.