fix expanding library clip containing titles

BUG: 365658