src/timeline/timeline.cpp
@@ -1672,9 +1672,9 @@ void Timeline::disableTimelineEffects(bool disable)
     }
 }
 
-void Timeline::importPlaylist(ItemInfo info, QMap <QString, QString> processedUrl, QMap <QString, QString> idMaps, QDomDocument doc, QUndoCommand *command)
+void Timeline::importPlaylist(ItemInfo info, QMap <QString, QString> idMaps, QDomDocument doc, QUndoCommand *command)
 {
-    projectView()->importPlaylist(info, processedUrl, idMaps, doc, command);
+    projectView()->importPlaylist(info, idMaps, doc, command);
 }
 
 void Timeline::refreshTrackActions()
